docker/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aoe2companion-graphql
  namespace: default
  labels:
    app: aoe2companion-graphql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aoe2companion-graphql
  template:
    metadata:
      labels:
        app: aoe2companion-graphql
    spec:
      containers:
        - name: aoe2companion-graphql
          image: denniske/aoe2companion-graphql:latest
          ports:
            - containerPort: 80
              name: http
