docker/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aoe2companion-graphql-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - graphql.aoe2companion.com
      secretName: graphql-aoe2companion-com-tls
  rules:
    - host: graphql.aoe2companion.com
      http:
        paths:
          - backend:
              serviceName: aoe2companion-graphql
              servicePort: 80
